# stm32h723_zephyr

./: CMakeLists.txt  README.rst  Zephyr.code-workspace  prj.conf
boards/arm/h723vg/: Kconfig.board  Kconfig.defconfig  Kconfig.h723vg  board.yml  h723vg.dts  h723vg.yaml  h723vg_defconfig
boards/arm/weact_h723vg/: Kconfig.board  Kconfig.defconfig  board.cmake  weact_h723vg.dts  weact_h723vg.yaml  weact_h723vg_defconfig
src/: main.c
